--- a/EBookFE/src/app/app.component.html
+++ b/EBookFE/src/app/app.component.html
@@ -2,5 +2,6 @@
   
   <a class="navbar-brand" [routerLink]="['/registrate']" >Registrate</a>
   <a class="navbar-brand" [routerLink]="['/login']" >Login</a>
+  <a class="navbar-brand" [routerLink]="['/zapocniObradu']" >Zapocni obradu</a>
 </nav>
 <router-outlet></router-outlet>
