--- a/EBookFE/src/app/a-potvrda-nastavak/a-potvrda-nastavak.component.html
+++ b/EBookFE/src/app/a-potvrda-nastavak/a-potvrda-nastavak.component.html
@@ -1,4 +1,6 @@
 <div>
+
+  <h2>Da biste nastavili proces, neophodno je potvrditi. Potvrdite: </h2>
   <form #f="ngForm" (ngSubmit)="onSubmit(f.value, f)" ngNativeValidate>
 
     <div *ngFor="let field of formFields" >
@@ -7,16 +9,16 @@
       <input type="text" name={{field.id}} ngModel  *ngIf="field.type.name=='string'" >
       <input type="checkbox" name={{field.id}} ngModel  *ngIf="field.type.name=='boolean'">
       <input type="number" name={{field.id}} ngModel  *ngIf="field.type.name=='long'">
-
-        <select name="{{field.id}}"  multiple ngModel *ngIf="field.type.name=='enum' ">
-          <option *ngFor="let category of naucneOblasti" value={{category.id}}>
-            {{category.nazivNO}}
-          </option>
-        </select>
-
+      <select name="field.id" *ngIf="field.type.name=='enum'">
+        <option *ngFor="let val of enumValues" value={{val}}>
+          {{field.type.values[val]}}
+        </option>
+      </select>
     </div>
 
-    <input type="submit">
+    <div>
+      <input type="submit">
+    </div>
   </form>
 
 
