--- a/EBookFE/src/app/a-pregled-rada-gl-urednik/a-pregled-rada-gl-urednik.component.html
+++ b/EBookFE/src/app/a-pregled-rada-gl-urednik/a-pregled-rada-gl-urednik.component.html
@@ -7,20 +7,16 @@
       <input type="text" name={{field.id}} ngModel  *ngIf="field.type.name=='string'" >
       <input type="checkbox" name={{field.id}} ngModel  *ngIf="field.type.name=='boolean'">
       <input type="number" name={{field.id}} ngModel  *ngIf="field.type.name=='long'">
-      <select name="{{field.id}}"  multiple ngModel *ngIf="field.type.name=='enum' ">
-        <option *ngFor="let category of naucneOblasti" value={{category.id}}>
-          {{category.nazivNO}}
+      <select name="field.id" *ngIf="field.type.name=='enum'">
+        <option *ngFor="let val of enumValues" value={{val}}>
+          {{field.type.values[val]}}
         </option>
       </select>
-
-      <input  type="file" accept="application/pdf" *ngIf="field.properties.type == 'file'" (change)="fileChoserListener($event.target.files, field)">
-
-
-
     </div>
 
-
-    <input type="submit">
+    <div>
+      <input type="submit">
+    </div>
   </form>
 
 
