--- a/EBookFE/src/app/a-pregled-pdf-gl-urednik/a-pregled-pdf-gl-urednik.component.html
+++ b/EBookFE/src/app/a-pregled-pdf-gl-urednik/a-pregled-pdf-gl-urednik.component.html
@@ -1,17 +1,23 @@
 <div>
+  <h2>Poslat Vam je email sa pdf-om koji treba da pregledate.</h2>
+  <h2>Nakon pregledanja neophodno je doneti odluku da li je rad dobro formatiran:</h2>
+  <br>
   <form #f="ngForm" (ngSubmit)="onSubmit(f.value, f)" ngNativeValidate>
 
     <div *ngFor="let field of formFields" >
       <label for={{field.id}}>{{field.label}}</label>
 
-      <input type="text" name={{field.id}} ngModel  *ngIf="field.type.name=='string'" >
-      <input type="checkbox" name={{field.id}} ngModel  *ngIf="field.type.name=='boolean'">
-      <input type="number" name={{field.id}} ngModel  *ngIf="field.type.name=='long'">
+      <input type="text" name={{field.id}} ngModel  *ngIf="field.type.name=='string' && field.defaultValue == null" >
+      <input type="checkbox" name={{field.id}} ngModel  *ngIf="field.type.name=='boolean' && field.defaultValue == null">
+      <input type="number" name={{field.id}} ngModel  *ngIf="field.type.name=='long' && field.defaultValue == null">
       <select name="field.id" *ngIf="field.type.name=='enum'">
         <option *ngFor="let val of enumValues" value={{val}}>
           {{field.type.values[val]}}
         </option>
       </select>
+
+      &nbsp;&nbsp;
+      <label for = {{field.id}}> <b><i>{{field.defaultValue}}</i></b></label>
     </div>
 
     <div>
