--- a/EBookFE/src/app/a-unos-info-rad/a-unos-info-rad.component.html
+++ b/EBookFE/src/app/a-unos-info-rad/a-unos-info-rad.component.html
@@ -4,7 +4,7 @@
     <div *ngFor="let field of formFields" >
       <label for={{field.id}}>{{field.label}}</label>
 
-      <input type="text" name={{field.id}} ngModel  *ngIf="field.type.name=='string'" >
+      <input type="text" name={{field.id}} ngModel  *ngIf="field.type.name=='string' && field.id != 'pdf'" >
       <input type="checkbox" name={{field.id}} ngModel  *ngIf="field.type.name=='boolean'">
       <input type="number" name={{field.id}} ngModel  *ngIf="field.type.name=='long'">
       <select name="{{field.id}}"  multiple ngModel *ngIf="field.type.name=='enum' ">
