--- a/EBookFE/src/app/a-izbor-casopisa/a-izbor-casopisa.component.html
+++ b/EBookFE/src/app/a-izbor-casopisa/a-izbor-casopisa.component.html
@@ -8,11 +8,13 @@
     <form #f="ngForm" (ngSubmit)="onSubmit(f.value, f)" ngNativeValidate>
       <div *ngFor="let field of formFields" >
         <label for={{field.id}}>{{field.label}}</label>
-        <select name="{{field.id}}"  multiple ngModel *ngIf="field.type.name=='enum' && field.id=='casopisiL'">
+        
+        <select name="{{field.id}}"  multiple ngModel *ngIf="field.type.name=='enum' ">
           <option *ngFor="let category of casopisi" value={{category.id}}>
             {{category.naziv}}
           </option>
         </select>
+
 
       </div>
       <input type="submit">
