--- a/EBookFE/src/app/a-potvrda-nastavak/a-potvrda-nastavak.component.html
+++ b/EBookFE/src/app/a-potvrda-nastavak/a-potvrda-nastavak.component.html
@@ -1,6 +1,6 @@
 <div>
 
-  <h2>Da biste nastavili proces, neophodno je potvrditi. Potvrdite: </h2>
+  <h2>Potvrdite da zelite da nastavite na proces obrade teksta: </h2>
   <form #f="ngForm" (ngSubmit)="onSubmit(f.value, f)" ngNativeValidate>
 
     <div *ngFor="let field of formFields" >
