--- a/EBookFE/src/app/a-izbor-recenzenata/a-izbor-recenzenata.component.html
+++ b/EBookFE/src/app/a-izbor-recenzenata/a-izbor-recenzenata.component.html
@@ -1,5 +1,5 @@
 <div class="midDiv">
-  <h3>Unesite urednike naucnih oblasti i recenzente za casopis</h3>
+  <h3>Izbor recenzenata</h3>
 </div>
 <div fxLayout="row" fxLayoutAlign="center center">
   <div fxLex="25%">
@@ -11,12 +11,26 @@
         <input type="text" name={{field.id}} ngModel  *ngIf="field.type.name=='string'" >
         <input type="checkbox" name={{field.id}} ngModel  *ngIf="field.type.name=='boolean'">
         <input type="number" name={{field.id}} ngModel  *ngIf="field.type.name=='long'">
-        <select name="{{field.id}}"  multiple ngModel *ngIf="field.type.name=='enum'">
+
+        <select name="{{field.id}}"  multiple ngModel *ngIf="field.type.name=='enum' && field.id == 'recenzentiL' ">
+          <option *ngFor="let val of enumValues" value={{val}}>
+            {{field.type.values[val]}}
+          </option>
+        </select>
+
+        <select name="{{field.id}}"  multiple ngModel *ngIf="field.type.name=='enum' && field.id != 'recenzentiL' ">
+          <option *ngFor="let val2 of enumValues2" value={{val2}}>
+            {{field.type.values[val2]}}
+          </option>
+        </select>
+
+        <!--
+        <select name="{{field.id}}"  multiple ngModel *ngIf="field.type.name=='enum' && field.id == 'recenzentiL'">
           <option *ngFor="let category of reviewers" value={{category.id}}>
             {{category.ime}}  {{category.prezime}}
           </option>
         </select>
-
+        -->
       </div>
       <br>
       <div>
