Ogranicen pristup stranica na osnovu uloge, dodato zadavanje roka

--- a/EBookFE/src/app/a-pregled-rada-gl-urednik/a-pregled-rada-gl-urednik.component.html
+++ b/EBookFE/src/app/a-pregled-rada-gl-urednik/a-pregled-rada-gl-urednik.component.html
@@ -6,7 +6,14 @@
       <label for={{field.id}}>{{field.label}}</label>
 
 
-      <input type="checkbox" name={{field.id}} ngModel  *ngIf="field.type.name=='boolean'">
+      <input type="text" name={{field.id}} ngModel  *ngIf="field.type.name=='string' && field.defaultValue == null" >
+      <input type="checkbox" name={{field.id}} ngModel  *ngIf="field.type.name=='boolean' && field.defaultValue == null">
+      <input type="number" name={{field.id}} ngModel  *ngIf="field.type.name=='long' && field.defaultValue == null">
+      <select name="field.id" *ngIf="field.type.name=='enum'">
+        <option *ngFor="let val of enumValues" value={{val}}>
+          {{field.type.values[val]}}
+        </option>
+      </select>
 
       <!--
       <input type="text" name={{field.id}} ngModel  *ngIf="field.type.name=='string'" >
