--- a/EBookFE/src/app/a-izbor-casopisa/a-izbor-casopisa.component.html
+++ b/EBookFE/src/app/a-izbor-casopisa/a-izbor-casopisa.component.html
@@ -8,6 +8,9 @@
     <form #f="ngForm" (ngSubmit)="onSubmit(f.value, f)" ngNativeValidate>
       <div *ngFor="let field of formFields" >
         <label for={{field.id}}>{{field.label}}</label>
+        <input type="text" name={{field.id}} ngModel  *ngIf="field.type.name=='string'" >
+        <input type="checkbox" name={{field.id}} ngModel  *ngIf="field.type.name=='boolean'">
+        <input type="number" name={{field.id}} ngModel  *ngIf="field.type.name=='long'">
 
         <select name="{{field.id}}"  multiple ngModel *ngIf="field.type.name=='enum' ">
           <option *ngFor="let val of enumValues" value={{val}}>
