Kraj odobriti/neodobriti, zapoceta manja/veca dorada

--- a/EBookFE/src/app/a-homepage/a-homepage.component.html
+++ b/EBookFE/src/app/a-homepage/a-homepage.component.html
@@ -1,7 +1,7 @@
 <div>
   <h2>Lista taskova:</h2>
   <table>
-    <tr *ngFor="let task of tasks" > <td>{{task.title}}</td><td>{{task.assignee}}</td>
+    <tr *ngFor="let task of tasks" > <td>{{task.name}}</td><td>{{task.assignee}}</td>
       <td><button  (click)="complete(task)">Zapocnite Task</button></td>
     </tr>
 
